kubernetes/apps/myfpl-api/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myfpl-api-ingress
  annotations:
    cert-manager.io/cluster-issuer: myfpl
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
spec:
  ingressClassName: nginx-private
  tls:
    - hosts:
        - api.dilfpl.com
      secretName: staging-api-myfpl
  rules:
    - host: api.dilfpl.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 80
